Add items images and refactoring